[package]
name = "aws-credentials-helper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
aws-config = "0.49"
aws-sdk-iam = "0.19"
aws-sdk-sts = "0.19"
clap = { version = "3", features = ["derive"] }
dirs = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["fs", "macros", "process", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = "0.3"
ykoath = { git = "https://github.com/Hakuyume/ykoath-rs.git" }
