[package]
name = "aws-credentials-helper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
aws-config = "0.54"
aws-credential-types = "0.54"
aws-sdk-iam = "0.24"
aws-sdk-sts = "0.24"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "3", features = ["derive"] }
dirs = "4"
humantime = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["fs", "macros", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
ykoath = { git = "https://github.com/Hakuyume/ykoath-rs.git" }
